--- a/.github/workflows/main_angulartotoapp.yml
+++ b/.github/workflows/main_angulartotoapp.yml
@@ -26,14 +26,13 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
-      
+          npm run build
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,7 +46,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -61,5 +60,4 @@ jobs:
         with:
           app-name: 'Angulartotoapp'
           slot-name: 'Production'
-          package: .
-          
+          package: "./dist"
