--- a/.github/workflows/main_angulartotoapp.yml
+++ b/.github/workflows/main_angulartotoapp.yml
@@ -42,10 +42,11 @@ jobs:
       contents: read #This is required for actions/checkout
 
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
         with:
           name: node-app
+          path: ./release.zip
 
       - name: Login to Azure
         uses: azure/login@v2
