--- a/.github/workflows/main_angulartotoapp.yml
+++ b/.github/workflows/main_angulartotoapp.yml
@@ -28,6 +28,15 @@ jobs:
           npm install
           npm run build
 
+      - name: Archive build output
+        run: zip -r release.zip ./dist
+
+      - name: Upload artifact for deployment job
+        uses: actions/upload-artifact@v4
+        with:
+          name: node-app
+          path: release.zip
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
@@ -48,6 +57,11 @@ jobs:
           name: node-app
           path: ./release.zip
 
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: node-app
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -55,10 +69,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_24E28EEA07634A90B122EB610FBEC8B6 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_E81A73F8E8654D3E8991979D0D116034 }}
 
-      - name: 'Deploy to Azure Web App'
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'Angulartotoapp'
           slot-name: 'Production'
-          package: "./dist"
+          package: 'release.zip'
