--- a/.github/workflows/main_angulartotoapp.yml
+++ b/.github/workflows/main_angulartotoapp.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -29,13 +29,8 @@ jobs:
           npm run build
 
       - name: Archive build output
-        run: zip -r release.zip ./dist
-
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: release.zip
+        shell: pwsh
+        run: Compress-Archive -Path .\dist\* -DestinationPath release.zip
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -47,16 +42,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: ./release.zip
-
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
@@ -76,3 +65,4 @@ jobs:
           app-name: 'Angulartotoapp'
           slot-name: 'Production'
           package: 'release.zip'
+
