fixed bg, output: /media v4

--- a/angular.json
+++ b/angular.json
@@ -89,7 +89,7 @@
               {
                 "glob": "**/*",
                 "input": "public",
-                "output": "/"
+                "output": "/media"
               }
             ],
             "styles": [
