fixed bg, output: media v5

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
               {
                 "glob": "**/*",
                 "input": "public",
-                "output": "/"
+                "output": "media"
               }
             ],
             "styles": [
@@ -89,7 +89,7 @@
               {
                 "glob": "**/*",
                 "input": "public",
-                "output": "/media"
+                "output": "media"
               }
             ],
             "styles": [
